# FinRAG

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  fly.toml
.claude/: settings.local.json
backend/: pyproject.toml
backend/src/finrag/: config.py  guardrails.py  main.py
backend/src/finrag/agent/: __init__.py  graph.py  nodes.py  state.py
backend/src/finrag/eval/: dataset.py  harness.py  metrics.py  smoke.py
backend/src/finrag/ingestion/: edgar.py  embed.py  facts.py  parse.py
backend/src/finrag/llm/: __init__.py  base.py  claude.py  gemini.py  local.py
backend/src/finrag/retrieval/: hybrid.py  lexical.py  rerank.py  vector.py
backend/src/finrag/tools/: __init__.py  calculator.py  citation.py  sql.py
data/: bm25_index.pkl  eval_results_anthropic.json  eval_results_gemini.json  eval_results_local.json  eval_results_local_synth.json  eval_results_local_tools.json  eval_v2_factual.json  eval_v2_multihop.json  smoke_results.json
data/qdrant/: meta.json
docs/: day1.md  day2.md  day3.md  day4.md  day5.md  demo.md  deploy.md  handoff.md  hf-space-README.md  test-questions.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentAnswer.tsx  AgentTrace.tsx  ChatPane.tsx  ChunkCard.tsx  CitationViewer.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  conversations.ts  types.ts
infra/: docker-compose.yaml
